--- a/locale/de_CH/LC_MESSAGES/django.po
+++ b/locale/de_CH/LC_MESSAGES/django.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-03-14 17:47+0200\n"
+"POT-Creation-Date: 2024-03-23 16:05+0100\n"
 "PO-Revision-Date: 2024-03-08 13:14+0000\n"
 "Last-Translator: Bernhard Bliem <bernhard.bliem@kausal.tech>\n"
 "Language-Team: German (Switzerland) <https://weblate.kausal.tech/projects/watch/django/de_CH/>\n"
@@ -105,6 +105,16 @@ msgstr ""
 
 #: actions/action_admin.py
 msgid "Reporting"
+msgstr ""
+
+#: actions/action_admin.py
+#, fuzzy
+#| msgid "Merged actions"
+msgid "Dependent actions"
+msgstr "Zusammengeführte Massnahmen"
+
+#: actions/action_admin.py
+msgid "Dependencies"
 msgstr ""
 
 #: actions/action_admin_mixins.py
@@ -400,6 +410,12 @@ msgid "Related actions"
 msgstr "Verbundene Massnahmen"
 
 #: actions/blocks/action_content.py
+#, fuzzy
+#| msgid "Action schedules"
+msgid "Action dependencies"
+msgstr "Massnahmenzeitpläne"
+
+#: actions/blocks/action_content.py
 msgid "Full width"
 msgstr ""
 
@@ -652,9 +668,10 @@ msgstr ""
 msgid "identifier"
 msgstr ""
 
-#: actions/export.py actions/models/action.py actions/models/attributes.py
-#: actions/models/category.py actions/models/plan.py feedback/models.py
-#: indicators/models.py orgs/models.py reports/models.py
+#: actions/export.py actions/models/action.py actions/models/action_deps.py
+#: actions/models/attributes.py actions/models/category.py
+#: actions/models/plan.py feedback/models.py indicators/models.py
+#: orgs/models.py reports/models.py
 msgid "name"
 msgstr ""
 
@@ -846,6 +863,16 @@ msgstr ""
 #: actions/models/action.py
 msgid "Set if this action is superseded by another action"
 msgstr "Setzen, wenn diese Massnahme durch eine andere Massnahme ersetzt worden ist"
+
+#: actions/models/action.py
+msgid "Role in dependencies"
+msgstr ""
+
+#: actions/models/action.py
+#, fuzzy
+#| msgid "Set if this action is merged with another action"
+msgid "Set if this action has the same role in all its dependency relationships with other actions"
+msgstr "Setzen, wenn diese Massnahme mit einer anderen Massnahme zusammengeführt ist"
 
 #: actions/models/action.py
 msgctxt "partitive"
@@ -1134,6 +1161,22 @@ msgstr ""
 
 #: actions/models/action.py
 msgid "Request changes"
+msgstr ""
+
+#: actions/models/action_deps.py
+#, fuzzy
+#| msgid "related actions"
+msgid "Preceding action"
+msgstr "verbundene Massnahmen"
+
+#: actions/models/action_deps.py
+#, fuzzy
+#| msgid "Merged actions"
+msgid "Dependent action"
+msgstr "Zusammengeführte Massnahmen"
+
+#: actions/models/action_deps.py
+msgid "Maximum dependency chain length exceeded."
 msgstr ""
 
 #: actions/models/attributes.py
@@ -1601,7 +1644,9 @@ msgid "parent"
 msgstr ""
 
 #: actions/models/plan.py
-msgid "The primary action classification"
+#, fuzzy
+#| msgid "The primary action classification"
+msgid "Primary action classification"
 msgstr "Die primäre Massnahmenklassifizierung"
 
 #: actions/models/plan.py
@@ -1609,7 +1654,9 @@ msgid "Used for primary navigation and grouping of actions"
 msgstr "Verwendet für primäre Navigation und Gruppieren von Massnahmen"
 
 #: actions/models/plan.py
-msgid "A secondary action classification"
+#, fuzzy
+#| msgid "A secondary action classification"
+msgid "Secondary action classification"
 msgstr "Eine sekundäre Massnahmenklassifizierung"
 
 #: actions/models/plan.py
@@ -1897,6 +1944,12 @@ msgstr "Massnahmenauswirkungen"
 
 #: actions/wagtail_admin.py
 msgid "Action schedules"
+msgstr "Massnahmenzeitpläne"
+
+#: actions/wagtail_admin.py
+#, fuzzy
+#| msgid "Action schedules"
+msgid "Action dependency roles"
 msgstr "Massnahmenzeitpläne"
 
 #: actions/wagtail_admin.py
