--- a/locale/de/LC_MESSAGES/django.po
+++ b/locale/de/LC_MESSAGES/django.po
@@ -10,11 +10,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-03-14 17:47+0200\n"
+"POT-Creation-Date: 2024-03-23 16:05+0100\n"
 "PO-Revision-Date: 2024-03-14 15:57+0000\n"
 "Last-Translator: Timo Tuominen <timo.tuominen@kausal.tech>\n"
-"Language-Team: German <https://weblate.kausal.tech/projects/watch/django/de/>"
-"\n"
+"Language-Team: German <https://weblate.kausal.tech/projects/watch/django/de/>\n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -107,6 +106,16 @@ msgstr "Interne Notizen für Planadministratoren"
 #: actions/action_admin.py
 msgid "Reporting"
 msgstr "Berichterstattung"
+
+#: actions/action_admin.py
+#, fuzzy
+#| msgid "Merged actions"
+msgid "Dependent actions"
+msgstr "Zusammengeführte Maßnahmen"
+
+#: actions/action_admin.py
+msgid "Dependencies"
+msgstr ""
 
 #: actions/action_admin_mixins.py
 #, python-format
@@ -401,6 +410,12 @@ msgid "Related actions"
 msgstr "Verbundene Maßnahmen"
 
 #: actions/blocks/action_content.py
+#, fuzzy
+#| msgid "Action schedules"
+msgid "Action dependencies"
+msgstr "Maßnahmenzeitpläne"
+
+#: actions/blocks/action_content.py
 msgid "Full width"
 msgstr "Volle Breite"
 
@@ -653,9 +668,10 @@ msgstr "Umsetzung"
 msgid "identifier"
 msgstr "Kennung"
 
-#: actions/export.py actions/models/action.py actions/models/attributes.py
-#: actions/models/category.py actions/models/plan.py feedback/models.py
-#: indicators/models.py orgs/models.py reports/models.py
+#: actions/export.py actions/models/action.py actions/models/action_deps.py
+#: actions/models/attributes.py actions/models/category.py
+#: actions/models/plan.py feedback/models.py indicators/models.py
+#: orgs/models.py reports/models.py
 msgid "name"
 msgstr "Name"
 
@@ -847,6 +863,16 @@ msgstr "ersetzt durch"
 #: actions/models/action.py
 msgid "Set if this action is superseded by another action"
 msgstr "Setzen, wenn diese Maßnahme durch eine andere Maßnahme ersetzt worden ist"
+
+#: actions/models/action.py
+msgid "Role in dependencies"
+msgstr ""
+
+#: actions/models/action.py
+#, fuzzy
+#| msgid "Set if this action is merged with another action"
+msgid "Set if this action has the same role in all its dependency relationships with other actions"
+msgstr "Setzen, wenn diese Maßnahme mit einer anderen Maßnahme zusammengeführt ist"
 
 #: actions/models/action.py
 msgctxt "partitive"
@@ -1136,6 +1162,22 @@ msgstr "Genehmigen"
 #: actions/models/action.py
 msgid "Request changes"
 msgstr "Änderungen anfordern"
+
+#: actions/models/action_deps.py
+#, fuzzy
+#| msgid "related actions"
+msgid "Preceding action"
+msgstr "verbundene Maßnahmen"
+
+#: actions/models/action_deps.py
+#, fuzzy
+#| msgid "Merged actions"
+msgid "Dependent action"
+msgstr "Zusammengeführte Maßnahmen"
+
+#: actions/models/action_deps.py
+msgid "Maximum dependency chain length exceeded."
+msgstr ""
 
 #: actions/models/attributes.py
 msgid "Ordered choice"
@@ -1606,7 +1648,9 @@ msgid "parent"
 msgstr "Übergeordneter Plan"
 
 #: actions/models/plan.py
-msgid "The primary action classification"
+#, fuzzy
+#| msgid "The primary action classification"
+msgid "Primary action classification"
 msgstr "Die primäre Maßnahmenklassifizierung"
 
 #: actions/models/plan.py
@@ -1614,7 +1658,9 @@ msgid "Used for primary navigation and grouping of actions"
 msgstr "Verwendet für primäre Navigation und Gruppieren von Maßnahmen"
 
 #: actions/models/plan.py
-msgid "A secondary action classification"
+#, fuzzy
+#| msgid "A secondary action classification"
+msgid "Secondary action classification"
 msgstr "Eine sekundäre Maßnahmenklassifizierung"
 
 #: actions/models/plan.py
@@ -1902,6 +1948,12 @@ msgstr "Maßnahmenauswirkungen"
 
 #: actions/wagtail_admin.py
 msgid "Action schedules"
+msgstr "Maßnahmenzeitpläne"
+
+#: actions/wagtail_admin.py
+#, fuzzy
+#| msgid "Action schedules"
+msgid "Action dependency roles"
 msgstr "Maßnahmenzeitpläne"
 
 #: actions/wagtail_admin.py
