--- a/locale/fi/LC_MESSAGES/django.po
+++ b/locale/fi/LC_MESSAGES/django.po
@@ -11,11 +11,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-03-14 17:47+0200\n"
+"POT-Creation-Date: 2024-03-23 16:05+0100\n"
 "PO-Revision-Date: 2024-03-14 15:57+0000\n"
 "Last-Translator: Timo Tuominen <timo.tuominen@kausal.tech>\n"
-"Language-Team: Finnish <https://weblate.kausal.tech/projects/watch/django/fi/"
-">\n"
+"Language-Team: Finnish <https://weblate.kausal.tech/projects/watch/django/fi/>\n"
 "Language: fi\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -108,6 +107,16 @@ msgstr "Sisäiset muistiinpanot pääkäyttäjille"
 #: actions/action_admin.py
 msgid "Reporting"
 msgstr "Raportointi"
+
+#: actions/action_admin.py
+#, fuzzy
+#| msgid "Recent actions"
+msgid "Dependent actions"
+msgstr "Viimeisimmät tapahtumat"
+
+#: actions/action_admin.py
+msgid "Dependencies"
+msgstr ""
 
 #: actions/action_admin_mixins.py
 #, python-format
@@ -403,6 +412,12 @@ msgid "Related actions"
 msgstr "Liittyvät toimenpiteet"
 
 #: actions/blocks/action_content.py
+#, fuzzy
+#| msgid "Action schedules"
+msgid "Action dependencies"
+msgstr "Toimenpiteen aikataulu"
+
+#: actions/blocks/action_content.py
 msgid "Full width"
 msgstr "Täysi leveys"
 
@@ -661,9 +676,10 @@ msgstr "Toteutus"
 msgid "identifier"
 msgstr "tunniste"
 
-#: actions/export.py actions/models/action.py actions/models/attributes.py
-#: actions/models/category.py actions/models/plan.py feedback/models.py
-#: indicators/models.py orgs/models.py reports/models.py
+#: actions/export.py actions/models/action.py actions/models/action_deps.py
+#: actions/models/attributes.py actions/models/category.py
+#: actions/models/plan.py feedback/models.py indicators/models.py
+#: orgs/models.py reports/models.py
 msgid "name"
 msgstr "nimi"
 
@@ -856,6 +872,16 @@ msgstr "korvattu toimenpiteellä"
 #: actions/models/action.py
 msgid "Set if this action is superseded by another action"
 msgstr "Aseta jos toimenpide on korvattu toisella toimenpiteellä"
+
+#: actions/models/action.py
+msgid "Role in dependencies"
+msgstr ""
+
+#: actions/models/action.py
+#, fuzzy
+#| msgid "Set if this action is merged with another action"
+msgid "Set if this action has the same role in all its dependency relationships with other actions"
+msgstr "Aseta jos toimenpide on yhdistetty toiseen toimenpiteeseen"
 
 #: actions/models/action.py
 msgctxt "partitive"
@@ -1147,6 +1173,22 @@ msgstr "Hyväksy"
 #, fuzzy
 msgid "Request changes"
 msgstr "Tallenna muutokset"
+
+#: actions/models/action_deps.py
+#, fuzzy
+#| msgid "Recent actions"
+msgid "Preceding action"
+msgstr "Viimeisimmät tapahtumat"
+
+#: actions/models/action_deps.py
+#, fuzzy
+#| msgid "Recent actions"
+msgid "Dependent action"
+msgstr "Viimeisimmät tapahtumat"
+
+#: actions/models/action_deps.py
+msgid "Maximum dependency chain length exceeded."
+msgstr ""
 
 #: actions/models/attributes.py
 msgid "Ordered choice"
@@ -1624,7 +1666,9 @@ msgid "parent"
 msgstr "Emo-ohjelma"
 
 #: actions/models/plan.py
-msgid "The primary action classification"
+#, fuzzy
+#| msgid "The primary action classification"
+msgid "Primary action classification"
 msgstr "Toimenpiteiden pääluokittelu"
 
 #: actions/models/plan.py
@@ -1632,7 +1676,9 @@ msgid "Used for primary navigation and grouping of actions"
 msgstr "Käytetään toimenpiteiden ensisijaiseen luokitteluun esimerkiksi sivuston navigaatiossa"
 
 #: actions/models/plan.py
-msgid "A secondary action classification"
+#, fuzzy
+#| msgid "A secondary action classification"
+msgid "Secondary action classification"
 msgstr "Toimenpiteiden toissijainen luokittelu"
 
 #: actions/models/plan.py
@@ -1922,6 +1968,12 @@ msgstr "Toimenpiteen vaikuttavuusluokat"
 
 #: actions/wagtail_admin.py
 msgid "Action schedules"
+msgstr "Toimenpiteen aikataulu"
+
+#: actions/wagtail_admin.py
+#, fuzzy
+#| msgid "Action schedules"
+msgid "Action dependency roles"
 msgstr "Toimenpiteen aikataulu"
 
 #: actions/wagtail_admin.py
@@ -4807,9 +4859,6 @@ msgstr "Ei oikeuksia poistaa käyttäjä joka kuuluu toimenpideohjelmiin, joita 
 
 #~ msgid "Select action plan"
 #~ msgstr "Valitse toimenpideohjelma"
-
-#~ msgid "Recent actions"
-#~ msgstr "Viimeisimmät tapahtumat"
 
 #~ msgid "My actions"
 #~ msgstr "Omat tapahtumat"
