--- a/locale/lv/LC_MESSAGES/django.po
+++ b/locale/lv/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-03-14 17:47+0200\n"
+"POT-Creation-Date: 2024-03-23 16:05+0100\n"
 "PO-Revision-Date: 2024-03-08 13:14+0000\n"
 "Last-Translator: Ida Sihvonen <ida.sihvonen@kausal.tech>\n"
 "Language-Team: Latvian <https://weblate.kausal.tech/projects/watch/django/lv/>\n"
@@ -107,6 +107,16 @@ msgstr "iekšējās piezīmes plānu administratoriem"
 #: actions/action_admin.py
 msgid "Reporting"
 msgstr "Ziņošana"
+
+#: actions/action_admin.py
+#, fuzzy
+#| msgid "Merged actions"
+msgid "Dependent actions"
+msgstr "Apvienotie pasākumi"
+
+#: actions/action_admin.py
+msgid "Dependencies"
+msgstr ""
 
 #: actions/action_admin_mixins.py
 #, python-format
@@ -401,6 +411,12 @@ msgid "Related actions"
 msgstr "Saistītās rīcības"
 
 #: actions/blocks/action_content.py
+#, fuzzy
+#| msgid "Action schedules"
+msgid "Action dependencies"
+msgstr "Rīcības grafiki"
+
+#: actions/blocks/action_content.py
 msgid "Full width"
 msgstr "Pilns platums"
 
@@ -653,9 +669,10 @@ msgstr "Īstenošana"
 msgid "identifier"
 msgstr "identifikators"
 
-#: actions/export.py actions/models/action.py actions/models/attributes.py
-#: actions/models/category.py actions/models/plan.py feedback/models.py
-#: indicators/models.py orgs/models.py reports/models.py
+#: actions/export.py actions/models/action.py actions/models/action_deps.py
+#: actions/models/attributes.py actions/models/category.py
+#: actions/models/plan.py feedback/models.py indicators/models.py
+#: orgs/models.py reports/models.py
 msgid "name"
 msgstr "nosaukums"
 
@@ -851,6 +868,16 @@ msgstr "aizstāts ar"
 #: actions/models/action.py
 msgid "Set if this action is superseded by another action"
 msgstr "Iestatīts, ja šo rīcību aizstāj cita rīcība"
+
+#: actions/models/action.py
+msgid "Role in dependencies"
+msgstr ""
+
+#: actions/models/action.py
+#, fuzzy
+#| msgid "Set if this action is merged with another action"
+msgid "Set if this action has the same role in all its dependency relationships with other actions"
+msgstr "Iestatīt, ja šī rīcība ir apvienota ar citu rīcību"
 
 #: actions/models/action.py
 msgctxt "partitive"
@@ -1142,6 +1169,22 @@ msgstr "Apstiprināt"
 #: actions/models/action.py
 msgid "Request changes"
 msgstr "Pieprasīt izmaiņas"
+
+#: actions/models/action_deps.py
+#, fuzzy
+#| msgid "related actions"
+msgid "Preceding action"
+msgstr "saistītās rīcības"
+
+#: actions/models/action_deps.py
+#, fuzzy
+#| msgid "Merged actions"
+msgid "Dependent action"
+msgstr "Apvienotie pasākumi"
+
+#: actions/models/action_deps.py
+msgid "Maximum dependency chain length exceeded."
+msgstr ""
 
 #: actions/models/attributes.py
 msgid "Ordered choice"
@@ -1612,7 +1655,9 @@ msgid "parent"
 msgstr "vecāku"
 
 #: actions/models/plan.py
-msgid "The primary action classification"
+#, fuzzy
+#| msgid "The primary action classification"
+msgid "Primary action classification"
 msgstr "Galvenās rīcības klasifikācija"
 
 #: actions/models/plan.py
@@ -1620,7 +1665,9 @@ msgid "Used for primary navigation and grouping of actions"
 msgstr "Izmanto primārajai navigācijai un rīcību grupēšanai"
 
 #: actions/models/plan.py
-msgid "A secondary action classification"
+#, fuzzy
+#| msgid "A secondary action classification"
+msgid "Secondary action classification"
 msgstr "Sekundārās rīcības klasifikācija"
 
 #: actions/models/plan.py
@@ -1906,6 +1953,12 @@ msgstr "Rīcības ietekme"
 
 #: actions/wagtail_admin.py
 msgid "Action schedules"
+msgstr "Rīcības grafiki"
+
+#: actions/wagtail_admin.py
+#, fuzzy
+#| msgid "Action schedules"
+msgid "Action dependency roles"
 msgstr "Rīcības grafiki"
 
 #: actions/wagtail_admin.py
