--- a/locale/de_CH/LC_MESSAGES/django.po
+++ b/locale/de_CH/LC_MESSAGES/django.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-04-11 12:12+0300\n"
+"POT-Creation-Date: 2024-05-07 22:21+0200\n"
 "PO-Revision-Date: 2024-03-08 13:14+0000\n"
 "Last-Translator: Bernhard Bliem <bernhard.bliem@kausal.tech>\n"
 "Language-Team: German (Switzerland) <https://weblate.kausal.tech/projects/watch/django/de_CH/>\n"
@@ -76,7 +76,8 @@ msgid "Name"
 msgstr ""
 
 #: actions/action_admin.py actions/category_admin.py
-#: admin_site/wagtail_hooks.py indicators/wagtail_admin.py
+#: admin_site/wagtail_hooks.py budget/wagtail_admin.py
+#: indicators/wagtail_admin.py
 msgid "Categories"
 msgstr ""
 
@@ -284,7 +285,7 @@ msgstr ""
 
 #: actions/apps.py actions/models/plan.py content/models.py
 #: reports/spreadsheets/excel_report.py reports/tests/test_excel_roundtrip.py
-#: templates/modeladmin/edit.html
+#: templates/modeladmin/create.html
 msgid "Actions"
 msgstr "Massnahmen"
 
@@ -312,6 +313,10 @@ msgstr ""
 
 #: actions/attribute_type_admin.py
 msgid "If format is 'Numeric', a unit must be set"
+msgstr ""
+
+#: actions/attribute_type_admin.py actions/category_admin.py
+msgid "Order"
 msgstr ""
 
 #: actions/attribute_type_admin.py
@@ -464,8 +469,7 @@ msgid "Tasks"
 msgstr ""
 
 #: actions/blocks/action_dashboard.py actions/models/plan.py indicators/apps.py
-#: indicators/blocks.py indicators/templates/indicators/edit_values.html
-#: indicators/wagtail_admin.py
+#: indicators/blocks.py indicators/wagtail_admin.py
 msgid "Indicators"
 msgstr ""
 
@@ -1466,6 +1470,14 @@ msgid "Choose which information about contact persons is visible in the public U
 msgstr ""
 
 #: actions/models/features.py
+msgid "Show organization ancestors in contact details of contact persons"
+msgstr ""
+
+#: actions/models/features.py
+msgid "When displaying a contact person's contact details, should the contact person's organization be displayed along with all its ancestors?"
+msgstr ""
+
+#: actions/models/features.py
 #, fuzzy
 #| msgid "action contact persons"
 msgid "Hide moderators from the contact persons"
@@ -1565,6 +1577,14 @@ msgstr ""
 
 #: actions/models/features.py
 msgid "In the report spreadsheet output, include a sheet with all actions in a layout optimized for printing."
+msgstr ""
+
+#: actions/models/features.py
+msgid "Password protected"
+msgstr ""
+
+#: actions/models/features.py
+msgid "Is this plan password protected?"
 msgstr ""
 
 #: actions/models/features.py
@@ -1885,14 +1905,22 @@ msgid "monitoring quality points"
 msgstr ""
 
 #: actions/templates/site_summary/actions.html
-#, python-format
+#, fuzzy, python-format
+#| msgid ""
+#| "\n"
+#| "        <span>%(n)s</span> active action <span class=\"visuallyhidden\">monitored in %(plan.name)s</span>\n"
+#| "    "
+#| msgid_plural ""
+#| "\n"
+#| "        <span>%(n)s</span> active actions <span class=\"visuallyhidden\">monitored in %(plan.name)s</span>\n"
+#| "    "
 msgid ""
 "\n"
-"        <span>%(n)s</span> active action <span class=\"visuallyhidden\">monitored in %(plan.name)s</span>\n"
+"        <span>%(n)s</span> active action <span class=\"w-sr-only\">monitored in %(plan)s</span>\n"
 "    "
 msgid_plural ""
 "\n"
-"        <span>%(n)s</span> active actions <span class=\"visuallyhidden\">monitored in %(plan.name)s</span>\n"
+"        <span>%(n)s</span> active actions <span class=\"w-sr-only\">monitored in %(plan)s</span>\n"
 "    "
 msgstr[0] ""
 "\n"
@@ -2180,6 +2208,12 @@ msgstr ""
 msgid " By %(filter_title)s "
 msgstr ""
 
+#: admin_site/templates/wagtailadmin/base.html
+#, fuzzy
+#| msgid "Can administrate all actions"
+msgid "Administration"
+msgstr "Kann alle Massnahmen verwalten"
+
 #: admin_site/templates/wagtailadmin/login.html
 msgid "Sign in to Kausal Watch admin"
 msgstr ""
@@ -2355,6 +2389,10 @@ msgid "Swedish"
 msgstr ""
 
 #: aplans/settings.py
+msgid "Swedish (Finland)"
+msgstr ""
+
+#: aplans/settings.py
 msgid "Portuguese"
 msgstr ""
 
@@ -2402,7 +2440,7 @@ msgstr ""
 msgid "Contact persons with \"moderator\" role"
 msgstr ""
 
-#: aplans/utils.py reports/spreadsheets/excel_report.py
+#: aplans/utils.py
 msgid "Visibility"
 msgstr ""
 
@@ -2413,6 +2451,10 @@ msgstr ""
 
 #: aplans/utils.py
 msgid "updated by"
+msgstr ""
+
+#: budget/wagtail_admin.py
+msgid "Budget dimensions"
 msgstr ""
 
 #: content/apps.py
@@ -3041,66 +3083,32 @@ msgstr ""
 msgid "Permission denied"
 msgstr ""
 
-#: indicators/templates/indicators/edit_values.html
-msgid "Home"
-msgstr ""
-
-#: indicators/templates/indicators/edit_values.html
-msgid "Indicator data"
-msgstr ""
-
-#: indicators/templates/indicators/edit_values.html
-msgid "Observations"
-msgstr ""
-
-#: indicators/templates/indicators/edit_values.html
-msgid "Goals"
-msgstr ""
-
-#: indicators/templates/indicators/edit_values.html
-msgid "Add row"
-msgstr ""
-
-#: indicators/templates/indicators/edit_values.html
-msgid "Remove row"
-msgstr ""
-
-#: indicators/templates/indicators/edit_values.html
-msgid "Save changes"
-msgstr ""
-
-#: indicators/templates/indicators/edit_values.html
-msgid "Year"
-msgstr ""
-
-#: indicators/templates/indicators/edit_values.html
-msgid "Date"
-msgstr ""
-
-#: indicators/templates/indicators/edit_values.html
-msgid "Your changes have not been saved. Are you sure you want to exit?"
-msgstr ""
-
-#: indicators/templates/indicators/edit_values.html
-msgid "Unable to save changes"
-msgstr ""
-
-#: indicators/templates/indicators/edit_values.html
-msgid "Changes were saved"
-msgstr ""
-
 #: indicators/templates/site_summary/indicators.html
-#, python-format
+#, fuzzy, python-format
+#| msgid ""
+#| "\n"
+#| "        <span>%(n)s</span> active action <span class=\"visuallyhidden\">monitored in %(plan.name)s</span>\n"
+#| "    "
+#| msgid_plural ""
+#| "\n"
+#| "        <span>%(n)s</span> active actions <span class=\"visuallyhidden\">monitored in %(plan.name)s</span>\n"
+#| "    "
 msgid ""
 "\n"
-"        <span>%(total)s</span> indicator <span class=\"visuallyhidden\">monitored in %(plan.name)s</span>\n"
+"        <span>%(total)s</span> indicator <span class=\"w-sr-only\">monitored in %(plan)s</span>\n"
 "    "
 msgid_plural ""
 "\n"
-"        <span>%(total)s</span> indicators <span class=\"visuallyhidden\">monitored in %(plan.name)s</span>\n"
+"        <span>%(total)s</span> indicators <span class=\"w-sr-only\">monitored in %(plan)s</span>\n"
 "    "
 msgstr[0] ""
+"\n"
+"        <span>%(n)s</span> aktive Massnahme <span class=\"visuallyhidden\">überwacht in %(plan.name)s</span>\n"
+"    "
 msgstr[1] ""
+"\n"
+"        <span>%(n)s</span> aktive Massnahmen <span class=\"visuallyhidden\">überwacht in %(plan.name)s</span>\n"
+"    "
 
 #: indicators/wagtail_admin.py
 msgid "Show indicators"
@@ -4557,7 +4565,7 @@ msgstr ""
 msgid "Saving…"
 msgstr ""
 
-#: templates/modeladmin/create.html templates/modeladmin/edit.html
+#: templates/modeladmin/create.html
 msgid "Save"
 msgstr ""
 
