--- a/locale/de/LC_MESSAGES/django.po
+++ b/locale/de/LC_MESSAGES/django.po
@@ -10,11 +10,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-05-28 14:52+0200\n"
+"POT-Creation-Date: 2024-05-30 10:29+0300\n"
 "PO-Revision-Date: 2024-05-28 12:56+0000\n"
 "Last-Translator: Bernhard Bliem <bernhard.bliem@kausal.tech>\n"
-"Language-Team: German <https://weblate.kausal.tech/projects/watch/django/de/>"
-"\n"
+"Language-Team: German <https://weblate.kausal.tech/projects/watch/django/de/>\n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -77,8 +76,7 @@ msgid "Name"
 msgstr "Name"
 
 #: actions/action_admin.py actions/category_admin.py
-#: admin_site/wagtail_hooks.py budget/wagtail_admin.py
-#: indicators/wagtail_admin.py
+#: admin_site/wagtail_hooks.py indicators/wagtail_admin.py
 msgid "Categories"
 msgstr "Kategorien"
 
@@ -2435,10 +2433,6 @@ msgstr "%(color)s ist keine CSS-Farbe (z. B. \"#112233\", \"red\" oder \"rgb(0, 
 msgid "updated by"
 msgstr "aktualisiert von"
 
-#: budget/wagtail_admin.py
-msgid "Budget dimensions"
-msgstr "Budget-Dimensionen"
-
 #: content/apps.py
 msgid "According to the action plan"
 msgstr "Gemäß Maßnahmenplan"
@@ -3302,6 +3296,10 @@ msgid "User feedback received"
 msgstr "Benutzer-Feedback erhalten"
 
 #: notifications/models.py
+msgid "Manually scheduled notification"
+msgstr ""
+
+#: notifications/models.py
 msgid "notifications enabled"
 msgstr "Benachrichtigungen aktiviert"
 
@@ -3396,6 +3394,14 @@ msgid "send to custom email address"
 msgstr "an benutzerdefinierte E-Mail-Adresse senden"
 
 #: notifications/models.py
+msgid "This can only be set if a custom email address is defined"
+msgstr "Dies kann nur gesetzt werden, wenn eine benutzerdefinierte E-Mail-Adresse festgelegt ist"
+
+#: notifications/models.py
+msgid "If a custom email address is defined, this must be set"
+msgstr "Wenn eine benutzerdefinierte E-Mail-Adresse festgelegt ist, muss dies gesetzt werden"
+
+#: notifications/models.py
 msgid "Do not send to contact persons"
 msgstr "Nicht an Ansprechpersonen senden"
 
@@ -3416,6 +3422,10 @@ msgid "send to contact persons"
 msgstr "an Ansprechpersonen senden"
 
 #: notifications/models.py
+msgid "Notifications of this type cannot be sent to contact persons"
+msgstr "Benachrichtigungen dieser Art können nicht an Ansprechpersonen gesendet werden"
+
+#: notifications/models.py
 msgid "notification template"
 msgstr "Benachrichtigungsvorlage"
 
@@ -3424,16 +3434,45 @@ msgid "notification templates"
 msgstr "Benachrichtigungsvorlagen"
 
 #: notifications/models.py
-msgid "This can only be set if a custom email address is defined"
-msgstr "Dies kann nur gesetzt werden, wenn eine benutzerdefinierte E-Mail-Adresse festgelegt ist"
+#, fuzzy
+#| msgid "The local time of day when notifications are sent"
+msgid "The content of the notification"
+msgstr "Die lokale Tageszeit, zu der Benachrichtigungen gesendet werden"
 
 #: notifications/models.py
-msgid "If a custom email address is defined, this must be set"
-msgstr "Wenn eine benutzerdefinierte E-Mail-Adresse festgelegt ist, muss dies gesetzt werden"
+#, fuzzy
+#| msgid "send to contact persons"
+msgid "send to action contact persons"
+msgstr "an Ansprechpersonen senden"
 
 #: notifications/models.py
-msgid "Notifications of this type cannot be sent to contact persons"
-msgstr "Benachrichtigungen dieser Art können nicht an Ansprechpersonen gesendet werden"
+#, fuzzy
+#| msgid "indicator contact persons"
+msgid "send to indicator contact persons"
+msgstr "Indikatoransprechpersonen"
+
+#: notifications/models.py
+#, fuzzy
+#| msgid "send to plan admins"
+msgid "send to organization admins"
+msgstr "an Plan-Admins senden"
+
+#: notifications/models.py
+#, python-format
+msgid "The type must be \"%(t)s\"."
+msgstr ""
+
+#: notifications/models.py
+#, fuzzy
+#| msgid "Should notifications be sent?"
+msgid "scheduled notification"
+msgstr "Sollen Benachrichtigungen gesendet werden?"
+
+#: notifications/models.py
+#, fuzzy
+#| msgid "Should notifications be sent?"
+msgid "scheduled notifications"
+msgstr "Sollen Benachrichtigungen gesendet werden?"
 
 #: notifications/models.py
 msgid "HTML content for the block"
@@ -3484,8 +3523,21 @@ msgid "Recipients"
 msgstr "Empfänger"
 
 #: notifications/wagtail_admin.py
-msgid "Notification types"
-msgstr "Benachrichtigungsarten"
+#, python-format
+msgid "The email message will be sent on the specified day at %(time)s."
+msgstr ""
+
+#: notifications/wagtail_admin.py
+#, fuzzy
+#| msgid "Notifications"
+msgid "Single notifications"
+msgstr "Benachrichtigungen"
+
+#: notifications/wagtail_admin.py
+#, fuzzy
+#| msgid "Subject for email notifications"
+msgid "Automatic notifications"
+msgstr "Betreff für E-Mail-Benachrichtigungen"
 
 #: notifications/wagtail_admin.py
 msgid "Notification contents"
@@ -4552,6 +4604,12 @@ msgstr "Benutzer"
 #: users/models.py
 msgid "No permission to remove the user belonging to plans you are not managing."
 msgstr "Keine Berechtigung zum Entfernen von Benutzern, die zu Plänen gehören, die Sie nicht verwalten."
+
+#~ msgid "Budget dimensions"
+#~ msgstr "Budget-Dimensionen"
+
+#~ msgid "Notification types"
+#~ msgstr "Benachrichtigungsarten"
 
 #~ msgid "Own indicators"
 #~ msgstr "Mir zugewiesene Indikatoren"
