--- a/locale/de_CH/LC_MESSAGES/django.po
+++ b/locale/de_CH/LC_MESSAGES/django.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-05-28 14:52+0200\n"
+"POT-Creation-Date: 2024-05-30 10:29+0300\n"
 "PO-Revision-Date: 2024-03-08 13:14+0000\n"
 "Last-Translator: Bernhard Bliem <bernhard.bliem@kausal.tech>\n"
 "Language-Team: German (Switzerland) <https://weblate.kausal.tech/projects/watch/django/de_CH/>\n"
@@ -76,8 +76,7 @@ msgid "Name"
 msgstr ""
 
 #: actions/action_admin.py actions/category_admin.py
-#: admin_site/wagtail_hooks.py budget/wagtail_admin.py
-#: indicators/wagtail_admin.py
+#: admin_site/wagtail_hooks.py indicators/wagtail_admin.py
 msgid "Categories"
 msgstr ""
 
@@ -2468,10 +2467,6 @@ msgstr ""
 msgid "updated by"
 msgstr ""
 
-#: budget/wagtail_admin.py
-msgid "Budget dimensions"
-msgstr ""
-
 #: content/apps.py
 msgid "According to the action plan"
 msgstr "Gemäss Massnahmenplan"
@@ -3347,6 +3342,10 @@ msgid "User feedback received"
 msgstr ""
 
 #: notifications/models.py
+msgid "Manually scheduled notification"
+msgstr ""
+
+#: notifications/models.py
 msgid "notifications enabled"
 msgstr ""
 
@@ -3441,6 +3440,14 @@ msgid "send to custom email address"
 msgstr ""
 
 #: notifications/models.py
+msgid "This can only be set if a custom email address is defined"
+msgstr ""
+
+#: notifications/models.py
+msgid "If a custom email address is defined, this must be set"
+msgstr ""
+
+#: notifications/models.py
 msgid "Do not send to contact persons"
 msgstr ""
 
@@ -3461,6 +3468,10 @@ msgid "send to contact persons"
 msgstr ""
 
 #: notifications/models.py
+msgid "Notifications of this type cannot be sent to contact persons"
+msgstr ""
+
+#: notifications/models.py
 msgid "notification template"
 msgstr ""
 
@@ -3469,16 +3480,43 @@ msgid "notification templates"
 msgstr ""
 
 #: notifications/models.py
-msgid "This can only be set if a custom email address is defined"
+#, fuzzy
+#| msgid "The impact of this action"
+msgid "The content of the notification"
+msgstr "Die Auswirkungen dieser Massnahme"
+
+#: notifications/models.py
+#, fuzzy
+#| msgid "action contact persons"
+msgid "send to action contact persons"
+msgstr "Massnahmenansprechpersonen"
+
+#: notifications/models.py
+#, fuzzy
+#| msgid "action contact persons"
+msgid "send to indicator contact persons"
+msgstr "Massnahmenansprechpersonen"
+
+#: notifications/models.py
+#, fuzzy
+#| msgid "Has primary organizations for actions"
+msgid "send to organization admins"
+msgstr "Hat Hauptorganisationen für Massnahmen"
+
+#: notifications/models.py
+#, python-format
+msgid "The type must be \"%(t)s\"."
 msgstr ""
 
 #: notifications/models.py
-msgid "If a custom email address is defined, this must be set"
+msgid "scheduled notification"
 msgstr ""
 
 #: notifications/models.py
-msgid "Notifications of this type cannot be sent to contact persons"
-msgstr ""
+#, fuzzy
+#| msgid "receive action feedback notifications"
+msgid "scheduled notifications"
+msgstr "erhalte Massnahmen-Feedback-Benachrichtigungen"
 
 #: notifications/models.py
 msgid "HTML content for the block"
@@ -3529,8 +3567,21 @@ msgid "Recipients"
 msgstr ""
 
 #: notifications/wagtail_admin.py
-msgid "Notification types"
+#, python-format
+msgid "The email message will be sent on the specified day at %(time)s."
 msgstr ""
+
+#: notifications/wagtail_admin.py
+#, fuzzy
+#| msgid "Action classifications"
+msgid "Single notifications"
+msgstr "Massnahmenklassifizierungen"
+
+#: notifications/wagtail_admin.py
+#, fuzzy
+#| msgid "Action classifications"
+msgid "Automatic notifications"
+msgstr "Massnahmenklassifizierungen"
 
 #: notifications/wagtail_admin.py
 msgid "Notification contents"
