--- a/locale/en_AU/LC_MESSAGES/django.po
+++ b/locale/en_AU/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-05-28 14:52+0200\n"
+"POT-Creation-Date: 2024-05-30 10:29+0300\n"
 "PO-Revision-Date: 2020-09-07 15:50+0000\n"
 "Language-Team: English (Australia) (https://www.transifex.com/kausal-tech/teams/113123/en_AU/)\n"
 "Language: en_AU\n"
@@ -72,8 +72,7 @@ msgid "Name"
 msgstr ""
 
 #: actions/action_admin.py actions/category_admin.py
-#: admin_site/wagtail_hooks.py budget/wagtail_admin.py
-#: indicators/wagtail_admin.py
+#: admin_site/wagtail_hooks.py indicators/wagtail_admin.py
 msgid "Categories"
 msgstr ""
 
@@ -2448,10 +2447,6 @@ msgstr "%(color)s is not a CSS colour (e.g., \"#112233\", \"red\" or \"rgb(0, 25
 msgid "updated by"
 msgstr ""
 
-#: budget/wagtail_admin.py
-msgid "Budget dimensions"
-msgstr ""
-
 #: content/apps.py
 msgid "According to the action plan"
 msgstr ""
@@ -3307,6 +3302,10 @@ msgid "User feedback received"
 msgstr ""
 
 #: notifications/models.py
+msgid "Manually scheduled notification"
+msgstr ""
+
+#: notifications/models.py
 msgid "notifications enabled"
 msgstr ""
 
@@ -3401,6 +3400,14 @@ msgid "send to custom email address"
 msgstr ""
 
 #: notifications/models.py
+msgid "This can only be set if a custom email address is defined"
+msgstr ""
+
+#: notifications/models.py
+msgid "If a custom email address is defined, this must be set"
+msgstr ""
+
+#: notifications/models.py
 msgid "Do not send to contact persons"
 msgstr ""
 
@@ -3421,6 +3428,10 @@ msgid "send to contact persons"
 msgstr ""
 
 #: notifications/models.py
+msgid "Notifications of this type cannot be sent to contact persons"
+msgstr ""
+
+#: notifications/models.py
 msgid "notification template"
 msgstr ""
 
@@ -3429,16 +3440,41 @@ msgid "notification templates"
 msgstr ""
 
 #: notifications/models.py
-msgid "This can only be set if a custom email address is defined"
+msgid "The content of the notification"
 msgstr ""
 
 #: notifications/models.py
-msgid "If a custom email address is defined, this must be set"
+#, fuzzy
+#| msgid "usable for action categorization"
+msgid "send to action contact persons"
+msgstr "usable for action categorisation"
+
+#: notifications/models.py
+#, fuzzy
+#| msgid "usable for indicator categorization"
+msgid "send to indicator contact persons"
+msgstr "usable for indicator categorisation"
+
+#: notifications/models.py
+#, fuzzy
+#| msgid "organization"
+msgid "send to organization admins"
+msgstr "organisation"
+
+#: notifications/models.py
+#, python-format
+msgid "The type must be \"%(t)s\"."
 msgstr ""
 
 #: notifications/models.py
-msgid "Notifications of this type cannot be sent to contact persons"
+msgid "scheduled notification"
 msgstr ""
+
+#: notifications/models.py
+#, fuzzy
+#| msgid "organizations"
+msgid "scheduled notifications"
+msgstr "organisations"
 
 #: notifications/models.py
 msgid "HTML content for the block"
@@ -3489,8 +3525,21 @@ msgid "Recipients"
 msgstr ""
 
 #: notifications/wagtail_admin.py
-msgid "Notification types"
+#, python-format
+msgid "The email message will be sent on the specified day at %(time)s."
 msgstr ""
+
+#: notifications/wagtail_admin.py
+#, fuzzy
+#| msgid "organizations"
+msgid "Single notifications"
+msgstr "organisations"
+
+#: notifications/wagtail_admin.py
+#, fuzzy
+#| msgid "organizations"
+msgid "Automatic notifications"
+msgstr "organisations"
 
 #: notifications/wagtail_admin.py
 msgid "Notification contents"
