--- a/locale/en_GB/LC_MESSAGES/django.po
+++ b/locale/en_GB/LC_MESSAGES/django.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-05-28 14:52+0200\n"
+"POT-Creation-Date: 2024-05-30 10:29+0300\n"
 "PO-Revision-Date: 2020-09-07 15:50+0000\n"
 "Last-Translator: Bernhard Bliem, 2022\n"
 "Language-Team: English (United Kingdom) (https://www.transifex.com/kausal-tech/teams/113123/en_GB/)\n"
@@ -76,8 +76,7 @@ msgid "Name"
 msgstr ""
 
 #: actions/action_admin.py actions/category_admin.py
-#: admin_site/wagtail_hooks.py budget/wagtail_admin.py
-#: indicators/wagtail_admin.py
+#: admin_site/wagtail_hooks.py indicators/wagtail_admin.py
 msgid "Categories"
 msgstr ""
 
@@ -2452,10 +2451,6 @@ msgstr "%(color)s is not a CSS colour (e.g., \"#112233\", \"red\" or \"rgb(0, 25
 msgid "updated by"
 msgstr ""
 
-#: budget/wagtail_admin.py
-msgid "Budget dimensions"
-msgstr ""
-
 #: content/apps.py
 msgid "According to the action plan"
 msgstr ""
@@ -3311,6 +3306,10 @@ msgid "User feedback received"
 msgstr ""
 
 #: notifications/models.py
+msgid "Manually scheduled notification"
+msgstr ""
+
+#: notifications/models.py
 msgid "notifications enabled"
 msgstr ""
 
@@ -3405,6 +3404,14 @@ msgid "send to custom email address"
 msgstr ""
 
 #: notifications/models.py
+msgid "This can only be set if a custom email address is defined"
+msgstr ""
+
+#: notifications/models.py
+msgid "If a custom email address is defined, this must be set"
+msgstr ""
+
+#: notifications/models.py
 msgid "Do not send to contact persons"
 msgstr ""
 
@@ -3425,6 +3432,10 @@ msgid "send to contact persons"
 msgstr ""
 
 #: notifications/models.py
+msgid "Notifications of this type cannot be sent to contact persons"
+msgstr ""
+
+#: notifications/models.py
 msgid "notification template"
 msgstr ""
 
@@ -3433,16 +3444,41 @@ msgid "notification templates"
 msgstr ""
 
 #: notifications/models.py
-msgid "This can only be set if a custom email address is defined"
+msgid "The content of the notification"
 msgstr ""
 
 #: notifications/models.py
-msgid "If a custom email address is defined, this must be set"
+#, fuzzy
+#| msgid "usable for action categorization"
+msgid "send to action contact persons"
+msgstr "usable for action categorisation"
+
+#: notifications/models.py
+#, fuzzy
+#| msgid "usable for indicator categorization"
+msgid "send to indicator contact persons"
+msgstr "usable for indicator categorisation"
+
+#: notifications/models.py
+#, fuzzy
+#| msgid "organization"
+msgid "send to organization admins"
+msgstr "organisation"
+
+#: notifications/models.py
+#, python-format
+msgid "The type must be \"%(t)s\"."
 msgstr ""
 
 #: notifications/models.py
-msgid "Notifications of this type cannot be sent to contact persons"
+msgid "scheduled notification"
 msgstr ""
+
+#: notifications/models.py
+#, fuzzy
+#| msgid "organizations"
+msgid "scheduled notifications"
+msgstr "organisations"
 
 #: notifications/models.py
 msgid "HTML content for the block"
@@ -3493,8 +3529,21 @@ msgid "Recipients"
 msgstr ""
 
 #: notifications/wagtail_admin.py
-msgid "Notification types"
+#, python-format
+msgid "The email message will be sent on the specified day at %(time)s."
 msgstr ""
+
+#: notifications/wagtail_admin.py
+#, fuzzy
+#| msgid "organizations"
+msgid "Single notifications"
+msgstr "organisations"
+
+#: notifications/wagtail_admin.py
+#, fuzzy
+#| msgid "organizations"
+msgid "Automatic notifications"
+msgstr "organisations"
 
 #: notifications/wagtail_admin.py
 msgid "Notification contents"
